[project]
name = "903-most-popular-song-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "google-api-python-client>=2.157.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
]
