[project]
name = "903-most-popular-song-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "google-api-python-client>=2.157.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.6",
    "streamlit>=1.41.1",
]
